导航栏完成

--- a/about.html
+++ b/about.html
@@ -235,9 +235,7 @@
                         <li>
                           <a href="index.html">首页</a>
                         </li>
-                        <li>
-                          <a class="active" href="about.html">关于我们</a>
-                        </li>
+                        <li><a class="active" href="about.html">关于我们</a></li>
                         <li>
                           <a href="service.html">标准与理念</a>
                         </li>
@@ -251,7 +249,7 @@
                           <a href="news.html">新闻中心</a>
                         </li>
                         <li>
-                          <a href="contact.html">联系我们</a>
+                          <a  href="contact.html">联系我们</a>
                         </li>
                       </ul>
                     </div>
