--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet" />
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
     <link href="assets/sass/style.css" rel="stylesheet" />
+    <!-- 可复用样式文件 -->
+    <link href="assets/mycss/Reuse.css" rel="stylesheet" />
     <style>
       /* 峰会信息样式 */
       .wpo-summit-info-text .summit-title {
