--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ font-weight: 600;
 line-height: 28px; /* 140% */
       }
       .wpo-news-image img {
-        width: 1120px;
+        width: 100%;
         height: 662px;
         border-radius: 33px;
         object-fit: cover;
