--- a/about.html
+++ b/about.html
@@ -148,12 +148,12 @@
         color: var(--text-icon-font-gy-260-secondary, color(display-p3 0 0 0 / 0.60));
         text-align: center;
 
-        /* Title/Medium */
+        /* Title/Large */
         font-family: "PingFang SC";
-        font-size: 16px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 600;
-        line-height: 24px; /* 150% */
+        line-height: 26px; /* 144.444% */
       }
 
       /* 博客图片样式 */
@@ -323,10 +323,10 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2 class="wpo-blog-little-title">
-                      <a href="service.html">匠心高质量标准</a>
+                      中药&人类健康
                     </h2>
                     <p class="wpo-blog-little-content">
-                      我们致力于建立一套完整、透明、可执行的道地中药全产业链标准体系，从种子到成品，每一步都精益求精，为全球消费者提供最安全、有效的产品
+                        引用权威数据或世界卫生组织的观点，论述传统医学在全球补充与替代医学中的重要性，强调其在慢性病管理、“治未病”等方面的独特价值
                     </p>
                   </div>
                 </div>
@@ -339,10 +339,10 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2 class="wpo-blog-little-title">
-                      <a href="project.html">生态公益</a>
+                        亚洲疾病防治
                     </h2>
                     <p class="wpo-blog-little-content">
-                      秉持“以药养地，以地育药”的理念，我们将商业价值与社会责任相结合，投身于沙漠治理与生物多样性保护，实现人与自然的和谐共生
+                        结合亚洲地区高发的特定健康问题（如老龄化带来的系列问题、代谢综合征等），说明道地中药在提供“温和调养”解决方案上的针对性与潜力
                     </p>
                   </div>
                 </div>
@@ -355,10 +355,10 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2 class="wpo-blog-little-title">
-                      <a href="blog.html">全链条整合</a>
+                        未来医疗前景
                     </h2>
                     <p class="wpo-blog-little-content">
-                      我们提供覆盖全产业链的一站式解决方案，将严苛标准注入从传统中药到衍生品（化妆品、保健品）及药食同源食品的每一个环节，与伙伴共同定义下一代健康产品
+                        展望中药与现代生命科学（如基因组学、代谢组学）结合的可能性，描绘一个通过精准化、标准化的中药来提升全民健康水平的未来图景
                     </p>
                   </div>
                 </div>
