--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ text-underline-position: from-font;
           <div  class="row">
             <div class="col-lg-12 col-md-12 col-12">
               <div class="wpo-news-image">
-                <img src="assets/images/service-single/1.jpg" alt="第一条新闻" />
+                <img src="assets/images/service-single/2.jpg" alt="第一条新闻" />
               </div>              
               <div class="news-content">
                 <h3 class="wpo-service-area-title">峰会筹备工作顺利进行，首批演讲嘉宾名单确认</h3>
@@ -662,10 +662,10 @@ text-underline-position: from-font;
           <div class="row">
             <div class="col-lg-12 col-md-12 col-12">
               <div class="wpo-news-image">
-                <img src="assets/images/service-single/2.jpg" alt="第二条新闻" />
+                <img src="assets/images/service-single/1.jpg" alt="第二条新闻" />
               </div>
               <div class="news-content">
-                <h3 class="wpo-service-area-title">中药研究新进展，传统医学与现代科技结合</h3>
+                <h3 class="wpo-service-area-title">我们的生态修复项目亮相联合国生物多样性大会</h3>
                 <a href="#" class="read-more-link">阅读更多</a>
               </div>
             </div>
@@ -677,7 +677,7 @@ text-underline-position: from-font;
      
       <!-- wpo-partners-area-start -->
       <section class="partners-section" style="margin-bottom: 80px;">
-        <div class="container section-padding" style="background-color: #F2F3FF;">
+        <div class="container section-padding" style="background-color: #F2F3FF;border-radius:24px ;">
           <div class="row">
             <div class="cardtitle">
               <h2 class="titleone">我们的合作伙伴</h2>
