--- a/service.html
+++ b/service.html
@@ -72,6 +72,25 @@
         background: url(<path-to-image>) lightgray 50% / cover no-repeat, color(display-p3 0.3436 0.7619 0.4894);
       }
 
+      /* ===== 移除交互效果 ===== */
+      /* 移除图片悬浮效果 */
+      .wpo-blog-section .wpo-blog-item .wpo-blog-img img {
+        transition: none !important;
+        transform: none !important;
+        filter: none !important;
+      }
+
+      .wpo-blog-section .wpo-blog-item:hover .wpo-blog-img img {
+        transition: none !important;
+        transform: none !important;
+        filter: none !important;
+      }
+
+      /* 移除标题悬浮效果 */
+      .wpo-blog-section .wpo-blog-item .wpo-blog-content h2 a:hover {
+        color: #222222 !important; /* 保持原色，不变色 */
+      }
+
 
 
       /* 标准页面峰会信息样式 */
@@ -399,6 +418,11 @@
       margin-left: 10px;
       /* justify-content: space-between; */
     }
+
+    /* 第三个质检认证标准的左边框设为白色 */
+    .wpo-service-process:nth-child(3) .wpo-process-container {
+      border-left: 2px solid #ffffff;
+    }
     .wpo-service-process .wpo-process-item{
       flex: 1;
       height: auto;
@@ -532,6 +556,17 @@
     display: block;
     border-bottom: 2px solid #e0d7c6; /* 木质分割线 */
     }
+    .wpo-blog-section .wpo-blog-item .wpo-blog-content h2 {
+        color: var(--text-icon-font-gy-190-primary, rgba(0, 0, 0, 0.90));
+color: var(--text-icon-font-gy-190-primary, color(display-p3 0 0 0 / 0.90));
+
+/* Title/ExtraLarge */
+font-family: "PingFang SC";
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 140% */
+      }
    
     </style>
   </head>
@@ -631,7 +666,7 @@
       <!-- start wpo-blog-section -->
       <section class="wpo-blog-section section-padding" id="blog">
         <div class="container">
-          <div class="row align-items-center">
+          <div class="row align-items-center" style="margin-bottom: 32px;">
             <div class="card-title">
               <h2 class="titleone">源远流长的经验道地哲学</h2>
               <p class="titletwo">“道地药材”的概念，即特定地域出产的、品质优于其他地区同种药材的现象，其思想滥觞可追溯至中医药的源头。</p>
@@ -647,9 +682,7 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2>
-                      <a href="blog-single.html" class="wpo-blog-little-title"
-                        >奠基与确立</a
-                      >
+                      奠基与确立
                     </h2>
                     <p class="wpo-blog-little-content">
                         尽管现存最早的药学专著、成书于东汉时期的《神农本草经》并未直接使用“道地”一词，但其“上药、中药、下药”的分类标准，以及对部分药材“生于山谷”、“生于平泽”的产地描述，已蕴含了对药材自然生境与其药效关系的初步认知。这是品质与产地关联思想的萌芽
@@ -665,9 +698,7 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2>
-                      <a href="blog-single.html" class="wpo-blog-little-title"
-                        >发展与固化</a
-                      >
+                      发展与固化
                     </h2>
                     <p class="wpo-blog-little-content">
                         到了明代，伟大的医药学家李时珍在其巨著《本草纲目》的“序例”部分，明确将“辨地产”作为考订药物品种和质量的重要原则之一。他指出：“凡用药，必择土地所宜者，则药力具，疗疾多验。”书中更是大量记载了具体的道地药材，如“蜀椒”（四川的花椒）、“辽参”（辽东的人参），使“道地”从一个经验性的理念，发展成为一个系统性的、指导临床用药的实践标准
@@ -683,9 +714,7 @@
                   </div>
                   <div class="wpo-blog-content">
                     <h2>
-                      <a href="blog-single.html" class="wpo-blog-little-title"
-                        >经验结晶</a
-                      >
+                     经验结晶
                     </h2>
                     <p class="wpo-blog-little-content">
                         随后的数百年间，通过无数医家的临床实践和药商的贸易优选，逐渐形成了如“四大怀药”（河南怀庆府的地黄、牛膝、山药、菊花）、“浙八味”（浙江的白术、白芍、浙贝母等）等公认的道地药材品牌。这充分证明，“道地”是中华民族在长期与自然和疾病斗争中，通过“尝百草”式的反复试错和验证，总结出的关于药材最优品质的宝贵知识体系，是前科学时代的“大数据”分析与临床疗效验证的结晶
@@ -773,7 +802,8 @@
                         <div class="summit-item">
                         <div class="summit-content">
                             <h3 class="little-title">气候与林下环境</h3>
-                            <span class="little-text">人参是典型的阴生植物，忌强光直射。长白山脉的阔叶混交林形成了天然的遮光屏障，林下的散射光既能满足其光合作用需求，又避免了灼伤。漫长的冬季和积雪覆盖，保证了其充分的休眠期在这种近乎野生的环境下，人参生长极为缓慢（通常需5-6年以上才采收），漫长的生长期允许其充分进行生物转化，使得根部的人参皂苷种类更丰富、比例更协调、生物活性更强</span>
+                            <span class="little-text">人参是典型的阴生植物，忌强光直射。长白山脉的阔叶混交林形成了天然的遮光屏障，林下的散射光既能满足其光合作用需求，又避免了灼伤。漫长的冬季和积雪覆盖，保证了其充分的休眠期
+                                <br><br>在这种近乎野生的环境下，人参生长极为缓慢（通常需5-6年以上才采收），漫长的生长期允许其充分进行生物转化，使得根部的人参皂苷种类更丰富、比例更协调、生物活性更强</span>
                         </div>
                         </div>
                     </div>
