--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,103 @@
         flex-direction: column;
         z-index: 1;
       }
-      
+
       .icon img {
         padding-bottom: 20px;
+      }
+
+      /* ===== 两个卡片按三个卡片布局处理 ===== */
+      .office-info .row {
+        display: flex;
+        /* flex-wrap: nowrap; 禁止换行，强制一行显示 */
+        gap: 20px;
+        margin: 0;
+      }
+
+      .office-info .col {
+        flex: 1; /* 平均分配空间，无论几个卡片都按相同方式处理 */
+        min-width: 0; /* 允许收缩 */
+        padding: 0;
+      }
+
+      /* ===== 处理大于768px屏幕的文字换行错位问题 ===== */
+      @media (min-width: 769px) {
+        .office-info-item {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+          height: 100%;
+          min-height: 200px; /* 设置最小高度确保对齐 */
+          padding: 20px 10px;
+          box-sizing: border-box;
+        }
+
+        .office-info-icon {
+          flex-shrink: 0; /* 图标区域不收缩 */
+          margin-bottom: 15px;
+        }
+
+        .office-info-text {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          width: 100%;
+        }
+
+        .office-info-text h2 {
+          font-size: 16px;
+          font-weight: 600;
+          margin-bottom: 10px;
+          line-height: 1.2;
+          word-wrap: break-word; /* 允许长单词换行 */
+          hyphens: auto; /* 自动断字 */
+        }
+
+        .office-info-text p {
+          font-size: 13px;
+          line-height: 1.4;
+          margin-bottom: 5px;
+          word-wrap: break-word; /* 允许长单词换行 */
+          overflow-wrap: break-word; /* 强制换行 */
+        }
+
+        .office-info-text p:last-child {
+          margin-bottom: 0;
+        }
+      }
+      @media (max-width: 768px) {
+        .office-info .row {
+          display: block;
+        }
+      }
+      .office-info-text h2 {
+        color: #000;
+        color: color(display-p3 0 0 0);
+        text-align: center;
+
+        /* Headline/Large */
+        font-family: "PingFang SC";
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 44px; /* 122.222% */
+      }
+
+      .office-info-text p {
+        color: var(--text-icon-font-gy-260-secondary, rgba(0, 0, 0, 0.6));
+        color: var(
+          --text-icon-font-gy-260-secondary,
+          color(display-p3 0 0 0 / 0.6)
+        );
+
+        /* Title/ExtraLarge */
+        font-family: "PingFang SC";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 28px; /* 140% */
       }
     </style>
   </head>
