--- a/blog.html
+++ b/blog.html
@@ -491,6 +491,7 @@
         font-weight: 400;
         line-height: 24px; /* 150% */
         padding-left: 40px;
+        text-align: left;
       }
       .nav {
         flex-wrap: nowrap !important;
@@ -691,7 +692,7 @@
               <div class="join-us-title">
                 <span>4</span>
                 <h6>签署协议</h6>
-                <div class="join-us-line"></div>
+                <!-- <div class="join-us-line"></div> -->
               </div>
               <p>双方达成一致后，签署正式合作协议</p>
             </div>
