--- a/project.html
+++ b/project.html
@@ -540,7 +540,7 @@
 
       .wpo-blog-section .sectionthree > img {
         flex: 0 0 45%; /* 左侧图片占45%宽度，不收缩 */
-        height: 600px; /* 减少高度 */
+        height: 900px; /* 改为百分百高度 */
         border-radius: 20px;
         object-fit: cover;
         max-width: 500px; /* 限制最大宽度 */
@@ -627,7 +627,7 @@
 
         .wpo-blog-section .sectionthree > img {
           flex: 0 0 40%; /* 平板端图片占40%宽度 */
-          height: 450px;
+          height: 100%;
           max-width: 400px;
         }
 
@@ -726,7 +726,7 @@
         .wpo-blog-section .sectionthree > img {
           flex: none; /* 移除flex设置 */
           width: 100%;
-          height: 300px;
+          height: 100%;
           max-width: 400px;
           object-fit: cover;
         }
@@ -811,7 +811,7 @@
         }
 
         .wpo-blog-section .sectionthree > img {
-          height: 250px;
+          height: 100%;
           max-width: 350px;
         }
 
